# weather_api

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml  run.py  setup.py
.github/workflows/: ci.yml
deploy/: Dockerfile  config.yml  docker-compose-template.j2
docs/source/: conf.py  quickstart.rst
requirements/: dev.txt  prod.txt
requirements/in/: prod.in
weather_api/: processors.py
weather_api/app/core/: app.py  exceptions.py
weather_api/app/routes/: index.py  weather.py
weather_api/app/templates/: index.html
weather_api/configs/: configs.py  configs.yml
weather_api/services/: cache.py  callbacks.py  converters.py  errors.py  local_dynamo_db.py  local_s3_storage.py  network.py  scheme.py
