[project]
name = "weather-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp[speedups]>=3.12.15",
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "flake8>=7.3.0",
    "gunicorn>=23.0.0",
    "ipython>=9.5.0",
    "jinja2>=3.1.6",
    "pip-tools>=7.5.0",
    "pydantic>=2.11.7",
    "pydeployhelp>=1.4.3",
    "pylint>=3.3.8",
    "redis>=6.4.0",
    "ruamel-yaml>=0.18.15",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "starlette>=0.47.3",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
    "setuptools>=80.9.0",
    "types-aiofiles>=24.1.0.20250822",
    "types-jmespath>=1.0.2.20250809",
    "types-setuptools>=80.9.0.20250822",
]
